# python-project-49

./: .pyproject.toml.swp  Makefile  README.md  pyproject.toml
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  games.py  gcd.py  main.py  prime.py  progression.py
